# spatial-mech

./: .gitignore  DATA_MOVES.md  README.md  pyproject.toml  queue.txt  queue_b.txt  queue_baselines.txt  queue_extract.txt  queue_layerwise.txt  queue_llavaov.txt  queue_m1.txt  queue_m2.txt  queue_m4m5.txt  queue_marathon.txt  queue_method_b.txt  queue_phase10.txt  queue_phase11.txt  queue_phase12.txt  queue_phase12a_prep.txt  queue_phase12b.txt  queue_phase7.txt  queue_phase8.txt  queue_phase9.txt  queue_priority.txt  queue_resume.txt  queue_retry.txt
configs/: base.yaml  tier_a.yaml  tier_b.yaml  tier_c.yaml  tier_c_circle8.yaml  tier_c_free6dof.yaml  tier_c_grid3x3.yaml  tier_c_person_walk.yaml
reports/: cam_motion_vqa_multi_dataset.md  dirichlet_loss_plan.md  dirichlet_train_4cond.json  experiment_plan_topology.md  person_walk_probe_vqa.md  probing_topology_unification.md  theorem3_full.md  theory_draft.md  tier_b_analysis.md  tier_b_temporal_analysis.md  tier_c_analysis.md  tier_c_free6dof_camera_motion_5models.md  tier_c_free6dof_depth_shortcut_5models.md  tier_c_per_head_attribution.md  tier_c_topology_option3.md  tier_d_arkitscenes_cam_motion.md  tier_d_real_world_generalization.md  v8_lambda0_artifact_analysis.md
scripts/: _pattern_hero_figure.py  activation_steering_text.py  analyze_head_specialization.py  analyze_per_head_cumulative.py  build_dirichlet_train_data.py  build_queue_phase10_spatID.py  build_queue_phase11_n4.py  build_queue_phase12_shuffle.py  build_queue_phase3.py  build_queue_phase5.py  build_residualization_basis.py  cross_trajectory_probe.py  (+40 more)
(+256 files in other folders)
